# passmngr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: populate_vault.rs
src/: app.rs  crypto.rs  export.rs  import.rs  lib.rs  main.rs  model.rs  storage.rs  ui.rs
