[package]
name = "passmngr"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.11.0-rc.1"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Clipboard
arboard = "3.4"

# Error handling
anyhow = "1.0"

# Utilities
dirs = "5.0"
rpassword = "7.3"
generic-array = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
